--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
 @import url(
   'https://fonts.googleapis.com/css?family=Mukta:300,500,700');
-
-body{
+html, body, #content{
   margin: 0;
   padding: 0;
-  background: url("../img/background.jpg") no-repeat center fixed;
+  width: 100%;
+  height: 100%;
+}
+body{
+  background: url("../img/background.jpg") no-repeat center center fixed;
   background-size: cover;
   font-family: 'Mukta', sans-serif;
   --red: #B91E3B;
@@ -14,201 +17,54 @@ body{
   --darkBlue: #0A2C3A;
   --lightBlue:#0385B9;
   --transparentRed: rgba(109,7,26,0.75);
+  overflow-x: hidden;
+  overflow-y: auto;
 }
-
-#content, #viewContent, #infosContainer{
-  margin: 1% auto;
-}
-
-#viewContent, #infosContainer, h1{
+#viewContent, #infosContainer, header{
   box-shadow: 1px 2px 3px var(--bdxRed);
+}
+#content{
+  max-width: 100vw;
+  padding: 0;
+  margin: 0 auto;
+  margin-top: 15vh;
+  border: none;
 }
 
 /* Style du Header */
 header{
   width: 100%;
-  margin: 0;
+  padding: 1.5%;
+  height: 15vh;
+  background-color: var(--bdxRed);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000000;
 }
 h1{
+  height: 100%;
   font-size: 1.75rem;
   text-transform: uppercase;
   text-align: center;
   font-weight: 700;
   color: white;
   text-shadow: 2px 2px 2px var(--darkBlue);
-  background-color: var(--transparentRed);
-  min-height: 7vh;
-  padding-top: 1%;
-}
-#content{
-  max-width: 100vw;
-  padding: 0;
-  margin: 0 auto;
-  border: none;
 }
 
-/* Style de la Map */
-#mapContainer{
-  min-height: 70vh;
-  width: 70vw;
-  padding: 0;
-}
-#viewContent{
-  border-radius: 25px;
-  width: 100%;
-}
-/* Style du formulaire + FicheInfoStation + Canvas */
-
-#titreStation{
-  margin: 5%;
-  padding: 2% 0;
-  text-align: center;
-  text-decoration: underline;
-  text-transform: uppercase;
-  font-size: 1.5rem;
-  font-weight: 600;
-  background-color: rgba(0,0,0,0.25);
-  text-shadow: 2px 2px 2px black;
-  border-radius: 15px;
-  box-shadow: 1px 2px 3px black;
-}
-.hidden{
-  opacity: 0;
-}
-.stationsToulouse{
-  color: white;
-  margin: 5%;
-  padding: 15px;
-  min-height: 30vh;
-  border-radius: 15px;
-  background-color: rgba(0,0,0,0.25);
-  text-shadow: 2px 2px 2px black;
-  display: flex;
-  flex-wrap:wrap;
-  flex-direction: column;
-  justify-content: center;
-  font-size: 1.25rem;
-  text-align: center;
-  box-shadow: 1px 2px 3px black;
-}
-.stationsToulouse *{
-  margin: 1% auto;
-}
-#stationAddress{
-  font-size: 1.25rem;
-  font-style: italic;
-}
-
-#totalStands, #totalBikes{
-  background-color: var(--bdxRed);
-  position: relative;
-  padding: 0;
-  border: 1px solid white;
-  height: 12px;
-  width: 200px;
-}
-#availableStands, #availableBikes{
-  position: absolute;
-  left: 0;
-  background-color: var(--green);
-  margin: 0;
-  height: 10px;
-}
-
-#formUtilisateur{
-  margin: 10% auto;
-}
-#formContainer{
-  background-color: var(--transparentRed);
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  color: white;
-  padding-top: 1%;
-  min-height: 90vh;
-  border-radius: 0px 25px 25px 0px;
-}
-fieldset{
-  margin: 1%;
-  background-color: rgba(0,0,0, 0.25);
-}
-label{
-  color: white;
-  text-shadow: 1px 1px 2px var(--darkBlue);
-  font-size: 1.1rem;
-  text-decoration: underline;
-  margin: 0 1%;
-}
-input{
-  box-shadow: 1px 2px 3px var(--darkBlue);
-  border-radius: 5px;
-}
-#buttonForm{
-  margin: 0 auto;
-  width: 120px;
-  box-shadow: 1px 2px 3px var(--darkBlue);
-}
-#submitForm.btn.btn-info{
-  background-color: var(--lightBlue);
-  text-shadow: 1px 1px 1px var(--darkBlue);
-  width: 120px;
-  border: 1px solid white;
-}
-#canvasesContainer{
+/* style du slider */
+#anchor{
   display: none;
-  margin: 1% auto;
 }
-#signature{
-  color: black;
-  background-color: white;
-}
-#buttons{
-  width: 220px;
-  margin: 1% auto;
-}
-#buttons .btn{
-  width: 100px;
-  margin: none;
-}
-
-#mapid{ width: 100%; height: 100%;
-  border-radius: 25px 0px 0px 25px;}
-#mapid:hover{
-  cursor: hand;
-}
-
-/* Style de la section Infos Reservation */
-
-#infosContainer{
-  background-color: var(--transparentRed);
-  min-height: 20vh;
-  padding: 1% 2%;
-  border-radius: 25px;
-  color: white;
-  text-align: center;
-  text-shadow: 1px 1px 1px black;
-  font-size: 1.125rem;
-}
-#infosContainer *{
-  width: 100%;
-  border-radius: 25px;
-}
-
-/* ---------------------------------------------------------------------------------------------------------------
-
-  STYLE DU SLIDER
-
---------------------------------------------------------------------------------------------------------------- */
-
 #sliderContainer{
   position: relative;
-  /*display: none;*/
+  height: 85vh;
 }
 .arrow{
   position: absolute;
   bottom: 50%;
-  margin:  0.5%;
-
+  margin: 0.5%;
 }
 #arrowRight{
   right: 0%;
@@ -233,32 +89,36 @@ input{
  display: none;
 }
 #slides{
-  min-height: 400px;
-  max-width: 1660px;
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
+}
+.slides.slide-active{
+  display: block;
+}
+#slide1{
+  background: url('http://placehold.jp/0385B9/6D071A/1300x400.png?text=1') no-repeat center center;
+  background-size: cover;
+}
+#slide2{
+  background: url('http://placehold.jp/0A2C3A/B91E3B/1300x400.png?text=2') no-repeat center center;
+  background-size: cover;
+}
+#slide3{
+  background: url('http://placehold.jp/0385B9/6D071A/1300x400.png?text=3') no-repeat center center;
+  background-size: cover;
+}
+#slide4{
+  background: url('http://placehold.jp/0A2C3A/B91E3B/1300x400.png?text=4') no-repeat center center;
+  background-size: cover;
 }
 .slides{
   display: none;
   flex-basis: 100%;
   min-height: 400px;
   width: 1200px;
-}
-.slides.slide-active{
-  display: block;
-}
-#slide1{
-  background-image: url('http://placehold.jp/0385B9/6D071A/1300x400.png?text=1');
-}
-#slide2{
-  background-image: url('http://placehold.jp/0A2C3A/B91E3B/1300x400.png?text=2');
-}
-#slide3{
-  background-image: url('http://placehold.jp/0385B9/6D071A/1300x400.png?text=3');
-}
-#slide4{
-  background-image: url('http://placehold.jp/0A2C3A/B91E3B/1300x400.png?text=4');
 }
 #sliderButtons{
   background-color: transparent;
@@ -270,7 +130,6 @@ input{
   bottom: 0;
   left: 34.25%;
 }
-
 .sliderButtons{
   background-color: #6d071a;
   min-height: 24px;
@@ -280,8 +139,276 @@ input{
   border-radius: 50%;
 }
 
+/* Style de la Map */
+#mapContainer{
+  height: 85vh;
+  width: 90%;
+  margin: 0 auto;
+  padding: 0;
+}
+#mapid{
+  width: 100%;
+  height: 100%;
+  border-radius: 25px;
+}
+#mapid:hover{
+  cursor: hand;
+}
 
+/* Style des FicheInfoStation */
+#formContainer{
+  margin: 0 auto;
+  padding-top: 1%;
+  height: 85vh;
+  width: 92%;
+  background-color: var(--transparentRed);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  color: white;
+  border-radius: 25px;
+}
+#titreStation{
+  margin: 5%;
+  padding: 2% 0;
+  text-align: center;
+  text-decoration: underline;
+  text-transform: uppercase;
+  font-size: 1.75rem;
+  font-weight: 600;
+  background-color: rgba(0,0,0,0.25);
+  text-shadow: 2px 2px 2px black;
+  border-radius: 15px;
+  box-shadow: 1px 2px 3px black;
+}
+.hidden{
+  opacity: 0;
+}
+.stationsToulouse{
+  color: white;
+  margin: 5%;
+  padding: 15px;
+  min-height: 30vh;
+  border-radius: 15px;
+  background-color: rgba(0,0,0,0.25);
+  text-shadow: 2px 2px 2px black;
+  display: flex;
+  flex-wrap:wrap;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 1.75rem;
+  text-align: center;
+  box-shadow: 1px 2px 3px black;
+}
+.stationsToulouse *{
+  margin: 1% auto;
+}
+#stationAddress{
+  font-style: italic;
+}
+#totalStands, #totalBikes{
+  background-color: var(--bdxRed);
+  position: relative;
+  padding: 0;
+  border: 1px solid white;
+  height: 12px;
+  width: 200px;
+}
+#availableStands, #availableBikes{
+  position: absolute;
+  left: 0;
+  background-color: var(--green);
+  margin: 0;
+  height: 10px;
+}
 
+/* Style du formulaire */
+#formUtilisateur{
+  width: 95vw;
+  margin: 5% auto;
+}
+fieldset{
+  width: 100%;
+  padding: 5% 2.5%;
+  margin: 1% auto;
+  background-color: rgba(0,0,0, 0.25);
+}
+label{
+  width: 20%;
+  color: white;
+  text-shadow: 1px 1px 2px var(--darkBlue);
+  font-size: 1.5rem;
+  text-decoration: underline;
+  margin: 0 auto;
+}
+input{
+  width: 70%;
+  padding-left: 2.5%;
+  margin: 0;
+  margin-left: 5%;
+  box-shadow: 1px 2px 3px var(--darkBlue);
+  font-size: 1.25rem;
+  border-radius: 5px;
+}
+#buttonForm{
+  margin: 0 auto;
+  width: 120px;
+  box-shadow: 1px 2px 3px var(--darkBlue);
+  background-color: var(--lightBlue);
+}
+#submitForm.btn.btn-info{
+  background-color: var(--lightBlue);
+  text-shadow: 1px 1px 1px var(--darkBlue);
+  width: 120px;
+  border: 1px solid white;
+  border-radius: 5px;
+}
 
+/* style du Canvas */
+#canvasesContainer{
+  display: none;
+  margin: 1% auto;
+}
+#signature{
+  color: black;
+  background-color: white;
+}
+#buttons{
+  width: 220px;
+  margin: 1% auto;
+}
+#buttons .btn{
+  width: 100px;
+  margin: none;
+}
 
+/* Style de la section Infos Reservation */
+#infosContainer{
+  background-color: var(--transparentRed);
+  height: 85vh;
+  width: 95vw;
+  margin: 0 auto;
+  border-radius: 25px;
+  color: white;
+  text-align: center;
+  text-shadow: 1px 1px 1px black;
+  font-size: 1.125rem;
+}
+#infosContainer *{
+  border-radius: 25px;
+}
 
+/*-----------------------------------------------------------------------------------------------------------------------------------
+
+                                                    STYLE DESKTOP
+
+-----------------------------------------------------------------------------------------------------------------------------------*/
+
+@media screen and (min-width: 1090px){
+
+  /* Style du header */
+  header{
+    height: 10vh;
+    position: static;
+  }
+  #anchor{
+    display: inline;
+    padding: 3px;
+    background-color: white;
+    color: var(--green);
+    border: 2px solid var(--green);
+    border-radius: 50%;
+    position: absolute;
+    top: 5.75vh;
+    left: 0.5%;
+    line-height: 2rem;
+  }
+  #anchor:hover{
+    background-color: var(--green);
+    color: white;
+    border: 2px solid white;
+  }
+  /* Style du contenu */
+  #content{
+    margin-top: 0;
+  }
+
+  /* Style du slider */
+  #sliderContainer{
+    height: 90vh;
+  }
+
+  /* Style de la vue */
+  #viewContent{
+    box-shadow: none;
+    width: 98%;
+    height: 100vh;
+    margin: 0 auto;
+  }
+
+  /* Style de la map */
+  #mapContainer{
+    height: 85%;
+    width: 60%;
+    margin: 0;
+  }
+  #mapid{
+    border-radius: 25px 0 0 25px;
+  }
+
+  /* Style du formulaire */
+  #formContainer{
+    border-radius:0 25px 25px 0 ;
+    height: 85%;
+    width: 40%;
+    margin: 0;
+  }
+  #listeStations{
+    max-height: 65%;
+    margin: 0 auto;
+  }
+  #titreStation{
+    min-width: 35vw;
+    max-width: 35vw;
+    width: 35vw;
+    margin: 0 auto;
+    padding: 1%;
+  }
+  .stationsToulouse{
+    min-width: 35vw;
+    max-width: 35vw;
+    width: 35vw;
+    min-height: 40vh;
+    height: 40vh;
+    max-height: 40vh;
+    margin: 0 auto;
+  }
+  #stationAddress{
+    font-size: 1.5rem;
+  }
+  #formUtilisateur{
+    width: 90%;
+    margin: 1% auto;
+  }
+  fieldset{
+    border-radius: 15px;
+  }
+  /* Style de la section infos */
+  #infosContainer{
+    margin: 0;
+    padding: 1% 5%;
+    height: 15%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+  #formUtilisateur, #canvasesContainer{
+    max-height: 20%;
+  }
+  .infosReservation{
+    font-size: 1rem;
+    text-align: left;
+  }
+} /* Fin media queries desktop */
