Derniers changements en objets, Optimisation de la logique javascript et implementation des dernieres normes es6/7, Ajout des commentaires et amelioration de la mise en page

--- a/css/style.css
+++ b/css/style.css
@@ -307,7 +307,7 @@ input{
 #submitSignature.btn-success{
   background-color: var(--green);
 }
-/* Style de la section Infos Reservation */
+/* Style de la section Infos Réservation */
 #infosContainer{
   background-color: var(--transparentRed);
   height: 55vh;
